--- a/biome.jsonc
+++ b/biome.jsonc
@@ -34,6 +34,9 @@
           "level": "error",
           "fix": "none"
         }
+      },
+      "a11y": {
+        "all": false
       }
     }
   }
