--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "csp-header-playground",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "format": "pnpm biome check --write"
+    "dev": "PORT=3000 tsx watch src/index.tsx",
+    "format": "biome check --write"
   },
   "dependencies": {
     "@hono/node-server": "^1.12.2",
     "hono": "^4.5.11"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.8.3",
     "@types/node": "^20.11.17",
-    "biome": "^0.3.3",
     "tsx": "^4.7.1"
   }
 }
